--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "4.9.3",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.0.0",
+    "hardhat": "^2.22.18",
     "truffle": "^5.11.5"
   },
   "pnpm": {
